--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 # dependencies
-/node_modules
+/client/node_modules
+/server/node_modules
 
 # production
 /build
 
 # misc
 .DS_Store
-.env
+client/.env
+server/.env
 
 npm-debug.log*
 yarn-debug.log*
